--- a/.github/workflows/main_dustee-backend.yml
+++ b/.github/workflows/main_dustee-backend.yml
@@ -24,7 +24,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           sudo npm install
-          sudo npm start
+          sudo npm start &
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
