--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
-    "geoip-lite": "^1.4.7"
+    "geoip-lite": "^1.4.7",
+    "mongoose": "^7.3.4"
   }
 }
