--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "csv-parse": "^5.4.0",
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
