--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "fuse": "^0.4.0",
     "fuse.js": "^6.6.2",
     "geoip-lite": "^1.4.7",
     "jsonwebtoken": "^9.0.1",
