--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "cronitor": "^2.3.4",
     "csv-parse": "^5.4.0",
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
@@ -25,6 +26,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.4",
+    "node-cron": "^3.0.2",
     "winston": "^3.10.0"
   }
 }
